Starting user mapper
