# openapi.yaml
@@ -21,31 +21,6 @@ info:
 tags: []
 
 paths:
-  /login/register:
-    post:
-      summary: register
-      deprecated: false
-      description: ""
-      tags: []
-      parameters: []
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/LoginRequest"
-      responses:
-        "201":
-          description: "User Registered"
-        "400":
-          $ref: "#/components/responses/BadRequestError"
-        "409":
-          description: >-
-            The user already exists in the server - maybe get him to login page.
-          $ref: "#/components/responses/ConflictError"
-        "500":
-          $ref: "#/components/responses/InternalServerError"
-      security: []
-
   /login:
     post:
       summary: log in
@@ -79,6 +54,32 @@ paths:
           $ref: "#/components/responses/InternalServerError"
       security: []
 
+  /login/register:
+    post:
+      summary: register
+      deprecated: false
+      description: ""
+      tags: []
+      parameters: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/LoginRequest"
+      responses:
+        "201":
+          description: "User Registered"
+        "400":
+          $ref: "#/components/responses/BadRequestError"
+        "409":
+          description: >-
+            The user already exists in the server - maybe get him to login page.
+          $ref: "#/components/responses/ConflictError"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
+      security: []
+
+
 components:
   schemas:
     ErrorResponse:
@@ -104,7 +105,9 @@ components:
       properties:
         email:
           type: string
+          pattern: '^[^@]+@[^@]+\.[^@]+$'
           example: fulano@gmail.com
+
         password:
           type: string
           example: v3ryStr0ngP@sswrod
